[package]
name = "voice_chat"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[dependencies]
anyhow = "1.0.101"
audioadapter-buffers = "2.0.0"
cfg-if = "1.0.4"
clap = { version = "4.5.58", features = ["derive"] }
cpal = "0.17.1"
futures = "0.3.31"
libp2p = { version =  "0.56.0", features = ["tokio", "quic", "identify", "noise", "relay", "ping", "yamux", "macros", "tcp", "dcutr", "dns", "autonat"]}
libp2p-stream = "0.4.0-alpha"
opus = "0.3.1"
rand = "0.8.5"
rat-widget = "3.1.1"
ratatui = "0.30.0"
ringbuf = "0.4.8"
rubato = "1.0.1"
strum = "0.27.2"
tokio = { version = "1.49.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version =  "0.3.22", features = ["env-filter"]}
